add_executable(cudasfm cudasfm.cpp)
target_include_directories(cudasfm PRIVATE ${SHOMAGICK_INCLUDE_DIRS})
message("shomagick libraries are ${SHOMAGICK_LIBRARIES}")
set(CUDA_SEPARABLE_COMPILATION ON)
find_package (CUDA)
if (CUDA_FOUND)
	target_include_directories(cudasfm PRIVATE ${CUDA_INCLUDE_DIRS})
	  target_link_libraries (cudasfm PRIVATE ${CUDA_LIBRARIES})
	  target_link_libraries(cudasfm PRIVATE cudadevrt)
endif (CUDA_FOUND)
target_link_libraries(cudasfm PUBLIC ${SHOMAGICK_LIBRARIES})