add_executable(cudasfm cudasfm.cpp)
find_package (CUDA)
if (CUDA_FOUND)
	#cuda_add_executable(cudasfm cudasfm.cpp)
	target_link_libraries (cudasfm ${CUDA_LIBRARIES} ${CUDA_cudadevrt_LIBRARY})
	target_include_directories(cudasfm PRIVATE ${CUDA_INCLUDE_DIRS})
else()
	#add_executable(cudasfm cudasfm.cpp)
endif (CUDA_FOUND)
target_include_directories(cudasfm PRIVATE ${SHOMAGICK_INCLUDE_DIRS})
target_link_libraries(cudasfm ${SHOMAGICK_LIBRARIES})
target_compile_features(cudasfm PRIVATE cxx_std_17)